k8s-basic/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: smb-workload
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/3rdyearproj-mark-ohm-banjo/int365-client:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-github
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: smb-workload
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: frontend
