k8s-basic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressctl
  namespace: smb-workload
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    nginx.org/client-max-body-size: "5m"
spec:
  rules:
    - host: sharemybook.ddns.net
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /backend/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
